applications/repo-hk/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx-repo
    nginx.ingress.kubernetes.io/configuration-snippet: |
      location ~ \.iso$ {
        rewrite ^/(.*)  https://mirrors.tuna.tsinghua.edu.cn/openeuler$request_uri;
      }
      location ~ iso.sha256sum$ {
        rewrite ^/(.*)  https://mirrors.tuna.tsinghua.edu.cn/openeuler$request_uri;
      }
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: repo-ingress-nginx-repo
  namespace: repo-mirror
spec:
  tls:
    - hosts:
        - repo.openeuler.org
      secretName: repo-tls
  rules:
    - host: repo.openeuler.org
      http:
        paths:
          - backend:
              serviceName: repo-service
              servicePort: 80
            path: /

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx-repo
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/permanent-redirect: https://archives.openeuler.openatom.cn$request_uri
  name: repo-archives-hk-ingress
  namespace: repo-mirror
spec:
  tls:
    - hosts:
        - archives.openeuler.org
      secretName: repo-tls
  rules:
    - host: archives.openeuler.org

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/permanent-redirect: https://de-repo.openeuler.org$request_uri
  name: repo-paris-hk-ingress
  namespace: repo-mirror
spec:
  tls:
    - hosts:
        - fr-repo.openeuler.org
      secretName: repo-tls
  rules:
    - host: fr-repo.openeuler.org
